--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -8,9 +8,17 @@
 
 <body>
   <div class="full-width-bar">
-    <h1>LEADERBOARD</h1>
+    <img src="/public/zurich-logo.png" id="zurich-logo" />
+    <div id="main-title-container">
+      <div id="main-title">
+        <h1>TruGolf</h1>
+        <h2>Zurich Virtual Reality Golf</h2>
+      </div>
+    </div>
+    <img src="/public/zinc-logo.png" id="zinc-logo" />
   </div>
   <div id="container">
+    <h2>LEADERBOARD</h2>
     <table id="klasemen">
     </table>
     <div id="footer" class="full-width-bar"></div>
