update tampilan input data

--- a/public/input.html
+++ b/public/input.html
@@ -18,8 +18,8 @@
         <label for="damage">Damage</label>
         <input type="text" name="damage" id="damage" value="" placeholder="damage" /><br>
 
-        <label for="address">Alamat</label>
-        <input type="text" name="address" id="address" value="" placeholder="address" /><br>
+        <label for="address">Email</label>
+        <input type="text" name="address" id="address" value="" placeholder="email" /><br>
 
         <label for="phone">Telepon</label>
         <input type="text" name="phone" id="phone" value="" placeholder="phone" /><br>
